@@ -1,5 +1,6 @@
 [add] Python 3 compat.
 [add] Settings -> Maintenance -> Delete temporary files
+[add] Settings -> General -> Rate video after watching
 [fix] context menu after playback
 [fix] alternative player, do not append headers
 [fix/upd] post play events happen post play
